--- a/src/styles/regist.css
+++ b/src/styles/regist.css
@@ -13,7 +13,13 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
   width: 100%;
-  max-width: 350px;
+  max-width: 400px;
+}
+
+.register-box h1 {
+  color: #333;
+  font-size: 2.5rem;
+  margin-bottom: 40px;
 }
 
 .register-box h2 {
